# Rust-DiscordBot

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Run.ps1  Service_manage.ps1  Task.ps1  docker-compose.yaml  docker-compose.yml
.github/workflows/: Rust-Artifect.yml  build.yml  docker-build.yml  go.yml  test.yml
DB/: schema.sql
Docs/: Docker_Image.md  Slash_Command.md
Powershell/: Run.ps1
Powershell/config/: Options.ps1
aws_template/: aws-auth-cm.yaml  eks-nodegroup.yaml
aws_template/ManifestRepo/: deployment.yaml  service.yaml
config/: Filecheck.ps1  token.ps1
src/: lib.rs  main.rs
src/.sqlx/: schema.sql
src/bot/: aws_client.rs  bot_client.rs  client.rs  client_handlers.rs  handlers.rs  mod.rs  mysql_client.rs
src/client/: client.rs
src/commands/: aws.rs  aws_commands.rs  help.rs  mod.rs  ping.rs  test_command.rs  uptime.rs
src/commands/aws/: ec2.rs  ecr.rs  s3.rs
src/handlers/: event.rs  mod.rs  ping.rs  ready.rs  test.rs
src/http/: client.rs  mod.rs  ready.rs
src/services/: config.json  mod.rs
src/sql/: client.rs
template/: aws-auth-cm.yaml  chart.yaml  eks-nodegroup.yaml
templates/: argocd.yaml
tests/: aws_con_test.rs  client.rs  client_test.rs  handler_test.rs
