[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"

# DiscordBot
[dependencies.serenity]
default-features = false
version = "0.12.4"
features = [
  "builder",
  "chrono",
  "client",
  "collector",
  "framework",
  "gateway",
  "http",
  "model",
  "standard_framework",
  "utils",
  "rustls_backend",
]

# [dependencies.sqlx]
# version = "0.8.3"
# features = ["runtime-tokio", "macros", "mysql", "time"]

[dependencies.tokio]
version = "1.43.0"
features = ["full"]

[dependencies]
dotenv = "0.15.0"
# AWS
aws-config = { version = "1.5.16" }
aws-sdk-ec2 = { version = "1.110.0" }
aws-sdk-s3 = { version = "1.76.0" }